--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,49 @@
+.body {
+  width: 100%;
+}
+
 .title {
   font-size: 48px;
   color: #000;
   text-align: center;
 }
 
+.form {
+  margin-right: auto;
+  margin-left: auto;
+  padding: 30px;
+  border: solid #000;
+  width: 300px;
+}
+
+.form__title {
+  padding: 0;
+  margin: 0 0 20px;
+  font-size: 30px;
+}
+
+.form__label {
+  font-size: 30px;
+}
+
+.form__button {
+  font-size: 30px;
+  padding: 10px;
+  margin: 30px 0 0;
+  width: 100%;
+  background-color: #fff;
+  border: solid #000;
+  border-radius: 35px;
+}
+
 .shuffle {
   background-color: transparent;
   color: #000;
-  padding: 7px;
+  padding: 10px;
   font-size: 30px;
-  margin: 20px 28px 20px;
+  margin: 20px auto 20px;
+
+  border-radius: 50px;
 }
 
 .shuffle:hover {
@@ -18,15 +52,20 @@
 }
 
 .cardlist {
-  display: flex;
+  width: 95%;
+  margin-right: auto;
+  margin-left: auto;
+  height: 85vh;
+  display: grid;
   flex-wrap: wrap;
+  grid-template-columns: repeat(4, 1fr);
   justify-content: center;
-  gap: 30px;
+  gap: 10px;
 }
 
 .card {
-  width: 250px;
-  height: 400px;
+  width: auto;
+  height: auto;
   border-radius: 10px;
 }
 
