--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,37 @@
+@import url('../vendor/normalize.css');
+@import url('../vendor/fonts/Nunito/nunito.css');
+
 .body {
   width: 100%;
+  font-family: 'nunito', Arial, Helvetica, sans-serif;
 }
 
 .title {
   font-size: 48px;
   color: #000;
   text-align: center;
+  font-weight: 700;
 }
 
 .form__container {
+  padding: 0 10px;
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 10px;
 }
 
 .form {
   margin-right: auto;
   margin-left: auto;
-  padding: 30px;
+  padding: 10px;
   border: solid #000;
 }
 
 .form__title {
   padding: 0;
   margin: 0 0 20px;
-  font-size: 30px;
+  font-size: 20px;
 }
 
 .form__textinput-container {
@@ -33,26 +40,36 @@
   width: 100%;
 }
 
+.form__textinput {
+  width: 100%;
+}
+
 .form__label {
-  font-size: 30px;
+  font-size: 15px;
 }
 
 .form__button {
-  font-size: 30px;
-  padding: 10px;
-  margin: 30px 0 0;
+  font-size: 20px;
+  padding: 7px;
+  margin: 20px 0 0;
   width: 100%;
   background-color: #fff;
   border: solid #000;
   border-radius: 35px;
 }
 
+.form__button:hover {
+  cursor: pointer;
+  opacity: 0.7;
+}
+
 .shuffle {
   background-color: transparent;
   color: #000;
-  padding: 20px;
-  font-size: 30px;
-  margin: 20px auto 20px;
+  width: 90%;
+  padding: 10px;
+  font-size: 20px;
+  margin: 20px 5% 20px;
   border-radius: 50px;
 }
 
@@ -70,18 +87,19 @@
   flex-wrap: wrap;
   grid-template-columns: repeat(4, 1fr);
   justify-content: center;
-  gap: 10px;
+  gap: 3px;
 }
 
 .card {
   width: auto;
   height: auto;
-  border-radius: 10px;
   text-align: center;
   font-size: 100px;
   padding: 30% 0;
   object-fit: contain;
+  background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
 }
 
 @media (min-width: 768px) {
@@ -93,6 +111,9 @@
 }
 
 @media (min-width: 1024px) {
+  .title {
+    font-size: 56px;
+  }
   .shuffle {
     padding: 7px;
     font-size: 40px;
